--- a/Europe_Air_quality.ipynb
+++ b/Europe_Air_quality.ipynb
@@ -24644,6 +24644,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![title](italy.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### In case of Italy, the northern region has higher level of pollution"
    ]
   },
