--- a/Europe_Air_quality.ipynb
+++ b/Europe_Air_quality.ipynb
@@ -58,10 +58,9 @@
     "* Further examination of the data\n",
     "* Plotting a Geo-Scatter map\n",
     "* Merging Countries dataframe with airquality dataframe\n",
-    "* Again Plotting a Geo-Scatter map, but this time focusing on countries\n",
-    "* Plotting countries with high level of pollution\n",
     "* Bar plot of all countries with aggregated average of PM 2,5 levels\n",
-    "* Bar plot of all countries with max value registered of PM 2,5 levels"
+    "* Bar plot of all countries with max value registered of PM 2,5 levels\n",
+    "* Plotting countries with high level of pollution"
    ]
   },
   {
