--- a/Europe_Air_quality.ipynb
+++ b/Europe_Air_quality.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Plotly and Geopandas to make intresting plots "
+    "# Analyzing GeoSpatial Enviromental Data using Plotly and Geopandas "
    ]
   },
   {
